@@ -1,27 +1,34 @@
 package com.taxonic.carml.rdf_mapper.impl;
 
+
+import static com.taxonic.carml.rdf_mapper.impl.PropertyUtils.createSetterName;
+import static com.taxonic.carml.rdf_mapper.impl.PropertyUtils.findSetter;
+import static com.taxonic.carml.rdf_mapper.impl.PropertyUtils.getPropertyName;
+import static com.taxonic.carml.util.ModelSerializer.formatResourceForLog;
+import static java.util.Arrays.stream;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
+import static java.util.stream.Stream.concat;
+import static java.util.stream.Stream.empty;
+
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
+import com.taxonic.carml.rdf_mapper.Combiner;
 import com.taxonic.carml.rdf_mapper.Mapper;
 import com.taxonic.carml.rdf_mapper.PropertyHandler;
 import com.taxonic.carml.rdf_mapper.TypeDecider;
+import com.taxonic.carml.rdf_mapper.annotations.MultiDelegateCall;
 import com.taxonic.carml.rdf_mapper.annotations.RdfProperty;
 import com.taxonic.carml.rdf_mapper.annotations.RdfResourceName;
 import com.taxonic.carml.rdf_mapper.annotations.RdfType;
-import com.taxonic.carml.rdf_mapper.qualifiers.PropertyPredicate;
-import com.taxonic.carml.rdf_mapper.qualifiers.PropertySetter;
-import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Proxy;
 import java.lang.reflect.Type;
 import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -29,23 +36,33 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
-import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import javax.inject.Inject;
-import javax.inject.Qualifier;
 import org.apache.commons.lang3.tuple.Pair;
 import org.eclipse.rdf4j.model.IRI;
 import org.eclipse.rdf4j.model.Literal;
 import org.eclipse.rdf4j.model.Model;
+import org.eclipse.rdf4j.model.Namespace;
 import org.eclipse.rdf4j.model.Resource;
 import org.eclipse.rdf4j.model.Value;
 import org.eclipse.rdf4j.model.ValueFactory;
 import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class CarmlMapper implements Mapper, MappingCache {
+
+	private static final Logger LOG = LoggerFactory.getLogger(CarmlMapper.class);
+
+	private Set<Namespace> namespaces;
+
+	public CarmlMapper() {
+		this(new HashSet<>());
+	}
+	public CarmlMapper(Set<Namespace> namespaces) {
+		this.namespaces = namespaces;
+	}
 
 	// type is the exact type of instance we need; eg. NOT a supertype.
 	// so no unbound type parameters. no interface, unless a list or so.
@@ -56,7 +73,9 @@ public class CarmlMapper implements Mapper, MappingCache {
 
 		if (types.size() > 1) {
 			if (!types.stream().allMatch(t -> ((Class<?>)t).isInterface())) {
-				throw new RuntimeException("In case of multiple types, mapper requires all types to be interfaces");
+				throw new IllegalStateException(String.format(
+						"Error mapping %s. In case of multiple types, mapper requires all types to be interfaces",
+						formatResourceForLog(model, resource, namespaces, true)));
 			}
 		}
 
@@ -69,15 +88,17 @@ public class CarmlMapper implements Mapper, MappingCache {
 
 	@SuppressWarnings("unchecked")
 	private <T> T doMultipleInterfaceMapping(Model model, Resource resource, Set<Type> types) {
-		List<Type> implementations = types.stream().map(this::getInterfaceImplementation).collect(Collectors.toList());
+		List<Type> implementations = types.stream().map(this::getInterfaceImplementation).collect(toList());
 
 		Map<Type, Object> implementationsToDelegates = implementations.stream()
-				.collect(Collectors.toMap(t -> t, t-> doSingleTypeConcreteClassMapping(model, resource, t)));
+				.collect(toMap(
+						t -> t,
+						t-> doSingleTypeConcreteClassMapping(model, resource, t)));
 
 		Map<Type, List<Method>> implementationMethods =
-				implementations.stream().collect(Collectors.toMap(
+				implementations.stream().collect(toMap(
 						t -> t,
-						t -> gatherMethods((Class<?>) t).collect(Collectors.toList())));
+						t -> gatherMethods((Class<?>) t).collect(toList())));
 
 		BiFunction<Type, Method, Boolean> implementationHasMethod =
 				(t, m) -> implementationMethods.get(t).contains(m);
@@ -86,42 +107,94 @@ public class CarmlMapper implements Mapper, MappingCache {
 		return (T) Proxy.newProxyInstance(CarmlMapper.class.getClassLoader(), types.stream().toArray(Class<?>[]::new),
 				(proxy, method, args) -> {
 
-					Optional<Object> delegate = implementations.stream()
+					MultiDelegateCall multiDelegateCall = method.getAnnotation(MultiDelegateCall.class);
+
+					List<Object> delegates = implementations.stream()
 							.filter(t -> implementationHasMethod.apply(t, method))
 							.map(implementationsToDelegates::get) // TODO can this ever be null? this case is not checked below
-							.findFirst();
+							.collect(toList());
 
-					if (!delegate.isPresent()) {
-						throw new RuntimeException(String.format("no implementation present with specified method [%s]", method));
+					if (delegates.isEmpty()) {
+						throw new RuntimeException(String.format(
+								"Error processing %s%nCould not determine type. (No implementation present with specified method [%s])",
+										formatResourceForLog(model, resource, namespaces, true), method));
 					}
 
-					return
-					delegate.map(d -> {
- 						try {
-							return method.invoke(d, args);
-						} catch (IllegalAccessException | IllegalArgumentException
-								| InvocationTargetException e) {
-							throw new RuntimeException(
-									String.format(
-											"error trying to invoke method [%s] on delegate [%s]",
-												method, d), e);
-						}
-					})
-					// since we know 'delegate' is present, the case
-					// here means the invoked method returned null. so we
-					// return null.
-					.orElse(null);
+					if (multiDelegateCall != null) {
+						return multiDelegateMethodInvocation(delegates, method, multiDelegateCall, args);
+					} else {
+						return delegates.stream()
+								.findFirst()
+								.map(d -> singleDelegateMethodInvocation(d, method, args))
+								// since we know 'delegate' is present, the case
+								// here means the invoked method returned null. so we
+								// return null.
+								.orElse(null);
+					}
 				});
 	}
 
+	@SuppressWarnings("unchecked")
+	private Object multiDelegateMethodInvocation(List<Object> delegates, Method method,
+			MultiDelegateCall multiDelegateCall, Object... args) {
+		Type returnType = method.getReturnType();
+		return getCombinerFromMultiDelegateCall(multiDelegateCall)
+				.map(combiner -> combiner.combine(delegates
+								.stream()
+								.map(d -> singleDelegateMethodInvocation(d, method, args))
+								.collect(toList()))
+				)
+				.orElseGet(() -> {
+					if (!returnType.equals(Void.TYPE)) {
+						throw new IllegalStateException(String.format(
+								"No combiner specified for non-void multi delegate method %S", method));
+					}
+					return null;
+				});
+	}
+
+	private Optional<Combiner> getCombinerFromMultiDelegateCall(MultiDelegateCall multiDelegateCall) {
+		Class<?> combinerClass = multiDelegateCall.value();
+		if (combinerClass != null && combinerClass != MultiDelegateCall.DEFAULT.class) {
+			try {
+				return Optional.of((Combiner) combinerClass.getConstructor().newInstance());
+			} catch (
+					InstantiationException |
+							IllegalAccessException |
+							IllegalArgumentException |
+							InvocationTargetException |
+							NoSuchMethodException |
+							SecurityException e
+			) {
+				throw new RuntimeException(String.format(
+						"failed to instantiate multi delegate call combiner class %s", combinerClass.getCanonicalName()), e);
+			}
+		}
+		return Optional.empty();
+	}
+
+	private Object singleDelegateMethodInvocation(Object delegate, Method method, Object... args) {
+		try {
+		  return method.invoke(delegate, args);
+		} catch (IllegalAccessException | IllegalArgumentException
+				| InvocationTargetException e) {
+			throw new RuntimeException(
+					String.format(
+							"error trying to invoke method [%s] on delegate [%s]",
+							method, delegate), e);
+		}
+	}
+
+
+
 	private Stream<Method> gatherMethods(Class<?> clazz) {
-		return Stream.concat(
-				Arrays.asList(clazz.getDeclaredMethods()).stream(),
-				Stream.concat(
-						Arrays.asList(clazz.getInterfaces()).stream().flatMap(this::gatherMethods),
+		return concat(
+				stream(clazz.getDeclaredMethods()),
+				concat(
+						stream(clazz.getInterfaces()).flatMap(this::gatherMethods),
 						Optional.ofNullable(clazz.getSuperclass())
 							.map(this::gatherMethods)
-							.orElse(Stream.empty())
+							.orElse(empty())
 				)
 //				.filter(m -> Modifier.isPublic(m.getModifiers()))
 		);
@@ -140,29 +213,39 @@ public class CarmlMapper implements Mapper, MappingCache {
 
 		// build meta-model
 		// TODO cache
+
 		List<PropertyHandler> propertyHandlers =
-				Stream.concat(
-						Arrays.asList(c.getMethods()).stream()
-						.map(m -> getRdfPropertyHandler(m, c))
-						.filter(Objects::nonNull)
+				concat(
+						stream(c.getMethods())
+						.flatMap(m -> getRdfPropertyHandlers(m, c, model, resource))
 				,
-						Arrays.asList(c.getMethods()).stream()
+						stream(c.getMethods())
 						.map(m -> getRdfResourceNameHandler(m, c))
-						.filter(Objects::nonNull)
 				)
-				.collect(Collectors.toList());
+				.filter(Optional::isPresent).map(Optional::get)
+				.collect(toList());
 
 		Object instance;
 		try {
-			instance = c.newInstance();
+			instance = c.getConstructor().newInstance();
 		}
-		catch (InstantiationException | IllegalAccessException e) {
-			throw new RuntimeException("failed to instantiate [" + c.getCanonicalName() + "]", e);
+		catch (
+				InstantiationException |
+				IllegalAccessException |
+				IllegalArgumentException |
+				InvocationTargetException |
+				NoSuchMethodException |
+				SecurityException e
+		) {
+			throw new RuntimeException(String.format("Error processing %s%n  failed to instantiate [%s]"
+					, formatResourceForLog(model, resource, namespaces, true), c.getCanonicalName()), e);
 		}
 
 		propertyHandlers.forEach(h ->
 			h.handle(model, resource, instance)
 		);
+
+
 
 
 		// TODO error if mandatory properties are not present in triples?
@@ -234,9 +317,16 @@ public class CarmlMapper implements Mapper, MappingCache {
 		if (annotation != null) {
 			Class<?> deciderClass = annotation.value();
 			try {
-				return (TypeDecider) deciderClass.newInstance();
+				return (TypeDecider) deciderClass.getConstructor().newInstance();
 			}
-			catch (InstantiationException | IllegalAccessException e) {
+			catch (
+					InstantiationException |
+					IllegalAccessException |
+					IllegalArgumentException |
+					InvocationTargetException |
+					NoSuchMethodException |
+					SecurityException e
+			) {
 				throw new RuntimeException("failed to instantiate rdf type decider class " + deciderClass.getCanonicalName(), e);
 			}
 		}
@@ -271,164 +361,82 @@ public class CarmlMapper implements Mapper, MappingCache {
 
 	}
 
-	private Supplier<Collection<Object>> createCollectionFactory(Class<?> iterableType) {
-		if (iterableType == null) {
-			return null;
-		}
-		// TODO Map<Class<?>, Supplier<Collection<Object>>>
-		if (iterableType.equals(Set.class)) {
-			return LinkedHashSet::new;
-		} else if (iterableType.equals(List.class)) {
-			return LinkedList::new;
-		}
-		throw new RuntimeException("don't know how to create a factory for collection type [" + iterableType.getCanonicalName() + "]");
+
+	private Optional<PropertyHandler> getRdfResourceNameHandler(Method method, Class<?> c) {
+		return
+		Optional.ofNullable(method.getAnnotation(RdfResourceName.class))
+		.map(a -> {
+
+			String name = method.getName();
+			String property = getPropertyName(name);
+
+			String setterName = createSetterName(property);
+			Method setter = findSetter(c, setterName)
+				.orElseThrow(() -> createCouldNotFindSetterException(c, setterName));
+
+			BiConsumer<Object, Object> set = getSetterInvoker(setter, createSetterInvocationErrorFactory(c, setter));
+
+			return new PropertyHandler() {
+				@Override
+				public void handle(Model model, Resource resource, Object instance) {
+					set.accept(instance, resource.stringValue());
+				}
+
+				@Override
+				public boolean hasEffect(Model model, Resource resource) {
+					return true;
+				}
+			};
+		});
+	}
+	
+	private RuntimeException createCouldNotFindSetterException(Class<?> c, String setterName) {
+		return new RuntimeException(String.format("in class %s, could not find setter [%s] with 1 parameter",
+				c.getCanonicalName(), setterName));
 	}
 
-	private Function<Collection<Object>, Collection<Object>> createImmutableTransform(Class<?> iterableType) {
-		if (iterableType == null) {
-			return null;
-		}
-		if (iterableType.equals(Set.class)) {
-			return x -> Collections.unmodifiableSet((Set<Object>) x);
-		} else if (iterableType.equals(List.class)) {
-			return x -> Collections.unmodifiableList((List<Object>) x);
-		}
-		throw new RuntimeException("don't know how to create a transform to make collections of type [" + iterableType.getCanonicalName() + "] immutable");
+	private Function<Exception, RuntimeException> createSetterInvocationErrorFactory(Class<?> c, Method setter) {
+		return e -> new RuntimeException(String.format("could not invoke setter [%s.%s]", c.getSimpleName(), setter.getName()), e);
 	}
-
-	private static interface DependencyResolver {
-
-		Object resolve(Type type, List<Annotation> qualifiers);
-
-	}
-
-	private Optional<PropertyHandler> getSpecifiedPropertyHandler(
-		RdfProperty annotation,
-		DependencyResolver resolver
-	) {
-
-		if (annotation.handler().equals(PropertyHandler.class)) {
-			return Optional.empty();
-		}
-
-		Class<? extends PropertyHandler> handlerCls = annotation.handler();
-		PropertyHandler handler;
-		try {
-			handler = handlerCls.newInstance();
-		}
-		catch (InstantiationException | IllegalAccessException e) {
-			throw new RuntimeException("could not instantiate specified "
-				+ "PropertyHandler class [" + handlerCls.getCanonicalName() + "]");
-		}
-
-		// do dependency injection through setter methods annotated with @Inject
-		List<Consumer<Object>> setterInjectors =
-			Arrays.asList(handlerCls.getMethods()).stream()
-
-				// find methods annotated with @Inject
-				.filter(m -> m.getAnnotation(Inject.class) != null)
-				.<Consumer<Object>>map(m -> createInvocableSetter(m, resolver))
-			.collect(Collectors.toList());
-
-		setterInjectors.forEach(i -> i.accept(handler));
-
-		return Optional.of(handler);
-	}
-
-	private Consumer<Object> createInvocableSetter(Method method, DependencyResolver resolver) {
-		// gather qualifiers on setter
-		List<Annotation> qualifiers =
-			Arrays.asList(method.getAnnotations()).stream()
-				.filter(a -> a.annotationType().getAnnotation(Qualifier.class) != null)
-				.collect(Collectors.toList());
-
-		// determine property/setter type
-		List<Type> parameterTypes = Arrays.asList(method.getGenericParameterTypes());
-		if (parameterTypes.isEmpty() || parameterTypes.size() > 1) {
-			throw new RuntimeException("method [" + method.getName() + "], annotated "
-				+ "with @Inject does NOT take exactly 1 parameter; it takes " + parameterTypes.size());
-		}
-		Type propertyType = parameterTypes.get(0);
-
-		return instance -> setterInvocation(method, resolver, instance, propertyType, qualifiers);
-	}
-
-	private Object setterInvocation(
-		Method method,
-		DependencyResolver resolver,
-		Object instance,
-		Type propertyType,
-		List<Annotation> qualifiers
-	) {
-		Object propertyValue = resolver.resolve(propertyType, qualifiers);
-		try {
-			return method.invoke(instance, propertyValue);
-		}
-		catch (
-			IllegalAccessException |
-			IllegalArgumentException |
-			InvocationTargetException e
-		) {
-			throw new RuntimeException("error invoking setter [" + method.getName() + "]", e);
-		}
-	}
-
-	private PropertyHandler getRdfResourceNameHandler(Method method, Class<?> c) {
-		RdfResourceName annotation = method.getAnnotation(RdfResourceName.class);
-		if (annotation == null) {
-			return null;
-		}
-
-		String name = method.getName();
-		String property = PropertyUtils.getPropertyName(name);
-
-		String setterName = PropertyUtils.createSetterName(property);
-		Method setter = findSetter(c, setterName);
-
-		BiConsumer<Object, Object> set = getSetterInvocation(method, c, setter, setterName);
-
-		return new PropertyHandler() {
-
-			@Override
-			public void handle(Model model, Resource resource, Object instance) {
-				set.accept(instance, resource.stringValue());
-			}
-
-		};
-
-	}
-
-	private BiConsumer<Object, Object> getSetterInvocation(Method method, Class<?> c, Method setter, String setterName) {
-
+	
+	private BiConsumer<Object, Object> getSetterInvoker(Method setter, Function<Exception, RuntimeException> invocationErrorFactory) {
+		Objects.requireNonNull(setter);
+		
 		// TODO if no setter, set the field directly? (configurable option) ugh
-		if (setter == null) {
-			throw new RuntimeException("could not find setter [" + setterName + "] with 1 parameter");
-		}
+		
 		return (i, v) -> {
 			try {
-//				System.out.println("invoking [" + c.getSimpleName() + "." + setter.getName() + "]");
 				setter.invoke(i, v);
 			}
 			catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-				throw new RuntimeException("could not invoke setter [" + c.getSimpleName() + "." + setter.getName() + "]", e);
+				throw invocationErrorFactory.apply(e);
 			}
 		};
 	}
 
-	private PropertyHandler getRdfPropertyHandler(Method method, Class<?> c) {
+	private Stream<Optional<PropertyHandler>> getRdfPropertyHandlers(Method method, Class<?> c, Model model, Resource resource) {
 
-		RdfProperty annotation = method.getAnnotation(RdfProperty.class);
-		if (annotation == null) {
-			return null;
-		}
+		MethodPropertyHandlerRegistry.Builder regBuilder = MethodPropertyHandlerRegistry.builder();
 
+		regBuilder.method(method);
+		RdfProperty[] annotations = method.getAnnotationsByType(RdfProperty.class);
+
+		Arrays.asList(annotations) //
+				.stream() //
+				.forEach(a -> collectRdfPropertyHandler(a, method, c, regBuilder));
+
+		return regBuilder.isBuildable() ? regBuilder.build().getEffectiveHandlers(model, resource) : Stream.empty();
+	}
+
+	private void collectRdfPropertyHandler(RdfProperty annotation, Method method, Class<?> c, MethodPropertyHandlerRegistry.Builder regBuilder) {
 		String name = method.getName();
-		String property = PropertyUtils.getPropertyName(name);
+		String property = getPropertyName(name);
 
-		String setterName = PropertyUtils.createSetterName(property);
-		Method setter = findSetter(c, setterName);
+		String setterName = createSetterName(property);
+		Method setter = findSetter(c, setterName)
+				.orElseThrow(() -> createCouldNotFindSetterException(c, setterName));
 
-		BiConsumer<Object, Object> set = getSetterInvocation(method, c, setter, setterName);
+		BiConsumer<Object, Object> set = getSetterInvoker(setter, createSetterInvocationErrorFactory(c, setter));
 
 		PropertyType propertyType = determinePropertyType(setter);
 		Class<?> elementType = propertyType.getElementType();
@@ -457,141 +465,79 @@ public class CarmlMapper implements Mapper, MappingCache {
 		IRI predicate = f.createIRI(annotation.value());
 
 		Class<?> iterableType = propertyType.getIterableType();
-		Supplier<Collection<Object>> createIterable = createCollectionFactory(iterableType);
-		Function<Collection<Object>, Collection<Object>> immutableTransform = createImmutableTransform(iterableType);
 
+		PropertyValueMapper propertyValueMapper;
+
+		Boolean iterableProperty = iterableType != null;
+		regBuilder.isIterable(iterableProperty);
+		// iterable property - set collection value
+		if (iterableProperty) {
+			propertyValueMapper = IterablePropertyValueMapper
+					.createForIterableType(valueTransformer, iterableType);
+		}
+		
+		// single value property
+		else {
+			propertyValueMapper = new SinglePropertyValueMapper(predicate, valueTransformer);			
+		}
+		
 		// get handler from @RdfProperty.handler, if any
+		// TODO cache these per type/property
+		DefaultPropertyHandlerDependencyResolver dependencyResolver =
+			new DefaultPropertyHandlerDependencyResolver(set, predicate, CarmlMapper.this, CarmlMapper.this);
 		Optional<PropertyHandler> handler =
-			getSpecifiedPropertyHandler(
-				annotation,
-				new DependencyResolver() {
-
-					private Optional<Object> getQualifierValue(Class<? extends Annotation> qualifier) {
-						if (qualifier.equals(PropertyPredicate.class)) {
-							return Optional.of(predicate);
-						}
-						if (qualifier.equals(PropertySetter.class)) {
-							return Optional.of(set);
-						}
-
-						// TODO ..
-
-						return Optional.empty();
-					}
-
-					private Optional<Object> getValueByType(Type type) {
-						if (type.equals(Mapper.class)) {
-							return Optional.of(CarmlMapper.this);
-						} else if (type.equals(MappingCache.class)) {
-							return Optional.of(CarmlMapper.this);
-						}
-
-						// TODO ..
-
-						return Optional.empty();
-					}
-
-					@Override
-					public Object resolve(Type type, List<Annotation> qualifiers) {
-
-						// try simple mapping of a present qualifier to a value
-						Optional<Object> qualifierValue =
-							qualifiers.stream()
-								.map(Annotation::annotationType)
-								.map(t -> getQualifierValue(t))
-								.filter(Optional::isPresent)
-								.map(Optional::get)
-								.findFirst();
-						if (qualifierValue.isPresent()) {
-							return qualifierValue.get();
-						}
-
-						Optional<Object> valueByType = getValueByType(type);
-						if (valueByType.isPresent()) {
-							return valueByType.get();
-						}
-
-
-						// TODO ..
-
-
-						throw new RuntimeException(
-							"could not resolve dependency for type [" + type + "] and "
-								+ "qualifiers [" + qualifiers + "]");
-					}
-				}
-			);
+			new SpecifiedPropertyHandlerFactory(new DependencySettersCache())
+						.createPropertyHandler(annotation, dependencyResolver);
 		if (handler.isPresent()) {
-			return handler.get();
+			regBuilder.addHandler(handler.get());
+			return;
 		}
 
-		return new PropertyHandler() {
+		regBuilder.addHandler(new PropertyHandler() {
 
 			@Override
 			public void handle(Model model, Resource resource, Object instance) {
-
 				List<Value> values =
 					model.filter(resource, predicate, null)
 						.objects()
 						.stream()
-						.collect(Collectors.toList());
+						.collect(toList());
 
+				if (!values.isEmpty() || propertyValueMapper instanceof IterablePropertyValueMapper) {
+
+					if (!values.isEmpty() && annotation.deprecated()) {
+						LOG.warn(
+								"Usage of deprecated predicate {} encountered. Support in next release is not guaranteed. Upgrade to {}.",
+								annotation.value(), getActiveAnnotations(annotation, method));
+					}
+
+					// map data from rdf model to a value for this property,
+					// such as a list of complex objects, or a simple string.
+					propertyValueMapper.map(model, resource, instance, values).ifPresent(v -> set.accept(instance, v));
+
+					// TODO what about languages? @RdfLanguage("nl") to select only 1 language (or
+					// multiple?)
+					// then, if multiple such values exist in the graph, the property should be a
+					// List<String>.
+				}
 				// no values
-				if (values.isEmpty()) {
-					// TODO error if property has @RdfRequired?
-				}
-
-				// iterable property - set collection value
-				if (iterableType != null) {
-
-					List<Object> transformed = values.stream()
-						.map(v -> valueTransformer.transform(model, v))
-						.collect(Collectors.toList());
-
-					Collection<Object> result = createIterable.get();
-					transformed.forEach(result::add);
-					Collection<Object> immutable = immutableTransform.apply(result);
-					set.accept(instance, immutable);
-
-				}
-
-				// single value property
-				else {
-
-					// multiple values present - error
-					if (values.size() > 1) {
-						throw new RuntimeException("multiple values for property [" + predicate + "], but "
-							+ "corresponding java property is NOT an Iterable property");
-					}
-
-					if (!values.isEmpty()) {
-						Object result = valueTransformer.transform(model, values.get(0));
-						set.accept(instance, result);
-					}
-				}
-
-				// TODO what about languages? @RdfLanguage("nl") to select only 1 language (or multiple?)
-				// then, if multiple such values exist in the graph, the property should be a List<String>.
-
+				// TODO error if property has @RdfRequired?
 			}
-		};
+
+			@Override
+			public boolean hasEffect(Model model, Resource resource) {
+				return !model.filter(resource, predicate, null).isEmpty();
+			}
+		});
 	}
 
-	private static Method findSetter(Class<?> c, String setterName) {
-		List<Method> setters =
-			Arrays.asList(c.getMethods()).stream()
-				.filter(m -> m.getName().equals(setterName))
-				.filter(m -> m.getParameterCount() == 1)
-				.collect(Collectors.toList());
-		if (setters.isEmpty()) {
-			return null;
-		}
-		if (setters.size() > 1) {
-			throw new RuntimeException("multiple setters with name [" + setterName + "] and 1 parameter were found");
-		}
-		return setters.get(0);
+	private static String getActiveAnnotations(RdfProperty annotation, Method method) {
+		return Arrays.asList(method.getAnnotationsByType(RdfProperty.class)) //
+				.stream()//
+				.filter(a -> !a.equals(annotation) && !a.deprecated()) //
+				.map(RdfProperty::value) //
+				.collect(Collectors.joining(", or "));
 	}
-
 
 
 	// mapping cache
@@ -613,8 +559,7 @@ public class CarmlMapper implements Mapper, MappingCache {
 	@Override
 	public Type getDecidableType(IRI rdfType) {
 		if (!decidableTypes.containsKey(rdfType)) {
-			throw new RuntimeException("could not find a java type "
-				+ "corresponding to rdf type [" + rdfType + "]");
+			throw new RuntimeException(String.format("could not find a java type corresponding to rdf type [%s]", rdfType));
 		}
 		return decidableTypes.get(rdfType);
 	}
